[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9.0",
    "bakong-khqr>=0.4.12",
    "pillow>=11.3.0",
    "psycopg2-binary>=2.9.0",
    "python-dotenv>=1.0.0",
    "python-telegram-bot[job-queue]>=22.7",
    "qrcode>=8.2",
    "requests>=2.32.4",
    "urllib3>=2.5.0",
]
